=========
Changelog
=========

1.0b17 (unreleased)
===================

- Mercurial clone: refuse to update if there are uncommitted changes or
  outgoing changesets.


1.0b16 (2013-11-29)
===================

- Improve the bootstrap/upgrade fix for #13049: the bootstrap template needed a
  second improvement.

1.0b15 (2013-11-29)
===================

- Try to fix #13049 - will only work once the dev version is already at least
  at b15. Not sure whether it really does the job, though. Hard to test.

- Make environment and host arguments for running ``batou local`` optional.
  ``dev`` and ``localhost`` are the defaults now. Fixes #13034

- Allow specifying secrets with [component:xy] in addition to [xy] to make it
  easier to discover when used to the environment overrides. Both options are
  supported now. Fixes #13003

- Refactor Python virtualenv and package management. Provide explicit knowledge
  about Python versions 2.4, 2.5, 2.6, 2.7, 3.1, 3.2, and 3.3 to use compatible
  virtualenv/pip/setuptools versions and commands. Fixes #12941

- Use ``urllib`` module instead of ``wget`` command for cross platform
  compatibility.


1.0b14 (2013-11-26)
===================

- Make Buildout component install zc.buildout without dependencies (which is
  just setuptools), since that can break the version pinning of setuptools.

- Check whether packages required via a ``-e`` expression in the local
  ``requirements.txt`` are already installed.

- #12946: Make full path to python executable configurable for virtualenv
  (and buildout) component.

- Remove cleanup code that removes batou-0.2-style virtualenv directories (bin,
  lib, include etc.) from remote deployments.

- Add mailto setting to crontab component.

- Added some documentation.


1.0b13 (2013-11-19)
===================

- Introduce a plugin mechanism: if a local ``requirements.txt`` file is
  present, install its contents into the ``.batou`` virtualenv.
